@@ -428,6 +428,7 @@ Fixed bug 1609038 - Xslt report generators break if path contains "java"
 Fixed bug 2142986 - UselessOverridingMethod doesn't consider annotations
 Fixed bug 2027626 - False + : AvoidFinalLocalVariable
 Fixed bug 2606609 - False "UnusedImports" positive in package-info.java
+Fixed bug 2645268 - ClassCastException in UselessOperationOnImmutable.getDeclaration
 
 ruleset.dtd and ruleset_xml_schema.xsd added to jar file in rulesets directory
 bin and java14/bin scripts:
